# habagou

./: .dockerignore  .env.example  .gitignore  ATTRIBUTION.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  Dockerfile  Dockerfile.dev  LICENSE  LICENSE-ARPHIC  README.md  devenv.nix  docker-compose.yml  fly.toml  justfile  package.json  pnpm-lock.yaml  pyproject.toml
.cursor/: dev.sh  ensure-nix-daemon.sh  environment.json  install-skills.sh  install.sh  services.sh
.cursor/skillvendor/: skills.yaml
.github/workflows/: ci.yml  evals.yml  release.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_user_auth_identity.py  0003_learning_path_schema.py  0004_pack_owner_id.py  0005_drop_pack_status.py  0006_nullable_pack_slug.py  0007_pack_library.py  0008_user_feature_overrides.py
charts/habagou/: Chart.yaml  values.schema.json  values.yaml
data/packs/: categories.json
docker/: entrypoint.sh
docker/keycloak/: habagou-realm.template.json
docs/: agent-pack-generation.md  api.md  architecture.md  auth.md  ci.md  deploy.md  development.md  devex.md  evals.md  tickets.md  verification.md  workflows.yml
docs/adrs/: 0001-stroke-corpus-in-postgres.md  0002-use-hanzi-writer.md  0003-user-centric-guest-schema.md  0004-defer-ai-generation.md  0005-append-only-progress-events.md  0006-devenv-and-just-devex.md  0007-deploy-on-fly-with-neon.md  0007-session-cookie-oidc-auth.md  0008-review-state-as-rebuildable-projection.md  0009-pack-ownership.md  0010-agent-pack-generation.md  0011-conversational-practice-agent.md  0012-pack-library-enablement.md
docs/api/: openapi-v1.json
docs/plans/: admin-model-selection.md  pack-library.md
docs/product/: prd-path.md  prd-practice.md  prd.md
docs/prototype/: Habagou.html
docs/technical/: tdd.md
evals/: __init__.py  __main__.py  corpus.py  corpus_snapshot.json  generation.py  generation_dataset.yaml
scripts/: check_invariants.py  dev_env.py  e2e_backend.py  export_openapi.py  gen_eval_corpus_snapshot.py  generate_openapi_types.py  import_stroke_data.py  seed.py  validate_pack_data.py  verify_traceability.py  verify_workflow_catalog.py
src/habagou/: __init__.py  app.py  auth.py  authz.py  config.py  db.py  dependencies.py  errors.py  events.py  graphemes.py  logging.py  models.py  path_scheduling.py  repositories.py  seed_data.py  streaks.py  telemetry.py  workflows.yml
tests/: conftest.py
tests/e2e/: test_scaffold.py  test_workflow_traceability.py
tests/fixtures/: stroke_subset.txt
tests/integration/: conftest.py  test_admin_api.py  test_auth_api.py  test_characters_api.py  test_check_invariants.py  test_database.py  test_database_outage.py  test_drop_pack_status_migration.py  test_feature_flags_api.py  test_generation_api.py  test_learning_path_migration.py  test_library_api.py  test_nullable_pack_slug_migration.py  test_pack_owner_migration.py  test_packs_api.py  test_path_api.py  test_practice_api.py  test_progress_api.py  test_repositories.py  test_request_logging.py  test_workflow_event_coverage.py
tests/unit/: test_agents_layering.py  test_auth.py  test_authz.py  test_config.py  test_dependencies.py  test_dev_env.py  test_e2e_backend.py  test_evals_harness.py  test_events.py  test_feature_flags.py  test_frontend_serving.py  test_generation_dtos.py  test_generation_status.py  test_graphemes.py  test_health.py  test_model_request_guard.py  (+14 more)
(+211 files in other folders)
