[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "habagou"
version = "0.1.0"
description = "Learn to write Chinese characters by tracing them, stroke by stroke."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "MIT"
authors = [
    { name = "Matt McNaughton", email = "mattjmcnaughton@users.noreply.github.com" },
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "structlog>=24.0",
    "pydantic-settings>=2.0",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "authlib>=1.7.2",
    "itsdangerous>=2.2.0",
    "httpx>=0.28.1",
    "pydantic-ai-slim[openai]>=2.5.0",
    "logfire[fastapi,sqlalchemy]>=4.37",
]

[project.urls]
Repository = "https://github.com/mattjmcnaughton/habagou"

[tool.hatch.build.targets.wheel]
packages = ["src/habagou"]
artifacts = ["src/habagou/workflows.yml"]

[tool.uv]
exclude-newer = "1 week"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.6",
    "ruff>=0.8",
    "ty>=0.0.54",
    # Dev environments include the eval harness deps so `just gate` (ruff, ty,
    # unit tests) can see `evals/` without a separate sync. Eval *runs* stay
    # opt-in (`just evals`); only the deps ride along here.
    { include-group = "evals" },
]
# Agent eval harness (evals/, docs/evals.md). A separate group so the evals CI
# job can install a minimal env (`uv sync --no-dev --group evals`); the exact
# version is pinned by uv.lock.
evals = [
    "pydantic-evals>=2.13.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM", "TCH"]

[tool.pytest.ini_options]
testpaths = ["tests"]
junit_family = "legacy"
markers = [
    "external: tests that hit external services",
    "workflow(id): marks tests that prove a named workflow",
]
